Fixed everything
Cropped the photos to match and fixed unit classes. Added another grid.

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 html {
   font-family: "Open Sans", sans-serif;
-	box-sizing: border-box;
+  box-sizing: border-box;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -14,10 +14,14 @@ html {
 }
 
 *, *::before, *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
   margin: 0;
-  padding: 0;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
 }
